fixed a directory issue

--- a/views/comment.handlebars
+++ b/views/comment.handlebars
@@ -7,6 +7,6 @@
   </div>
   <div style="padding-left:25px;">
   <button type="submit" class="btn btn-primary">Submit</button>
-  <a href="/comment">Cancel</a>
+  <a href="/">Cancel</a>
   </div>
 </form>
